Bug 619934 - Fix startup crash in UploadSurfaceToTexture ra=jrmuizel

Some last minute changes caused this to assume that imageSurface->Data()
didn't return NULL.